--- a/userpanal/templates/userpanal/base.html
+++ b/userpanal/templates/userpanal/base.html
@@ -96,13 +96,13 @@
               <div class="fb-like" data-href="http://www.trainstatusonline.in/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="false" data-share="true"></div>
               <hr>
 			  <div class="list-group">
-				<a href="#" class="list-group-item active">Link</a>
+				<!--<a href="#" class="list-group-item active">Link</a>
 				<a href="#" class="list-group-item">Link</a>
 				<a href="#" class="list-group-item">Link</a>
 				<a href="#" class="list-group-item">Link</a>
 				<a href="#" class="list-group-item">Link</a>
 				<a href="#" class="list-group-item">Link</a>
-				<a href="#" class="list-group-item">Link</a>
+				<a href="#" class="list-group-item">Link</a>-->
 
 			  </div>
 		</div><!--/span-->
