--- a/userpanal/templates/userpanal/station_file_link.html
+++ b/userpanal/templates/userpanal/station_file_link.html
@@ -31,3 +31,14 @@ $( "#date" ).datepicker({
 });
 } );
 </script>
+
+
+<script>
+$( function() {
+$( "#livedate" ).datepicker({
+    minDate: -2,
+    maxDate: "+1D",
+    dateFormat: 'dd-mm-yy',
+});
+} );
+</script>
