--- a/userpanal/templates/userpanal/base.html
+++ b/userpanal/templates/userpanal/base.html
@@ -20,9 +20,7 @@
 <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.3.js"></script>
 <script type="text/javascript" src="https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min.js"></script>
 
-    <!--
-    <meta http-equiv="refresh" content="30">
-    -->
+
 </head>
 <body>
 
@@ -105,18 +103,32 @@
 		</div>
 
 		<div class="col-xs-6 col-sm-3  sidebar-offcanvas" id="sidebar">
-              <div class="fb-like" data-href="http://www.trainstatusonline.in/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="false" data-share="true"></div>
-              <hr>
-			  <div class="list-group">
-				<!--<a href="#" class="list-group-item active">Link</a>
-				<a href="#" class="list-group-item">Link</a>
-				<a href="#" class="list-group-item">Link</a>
-				<a href="#" class="list-group-item">Link</a>
-				<a href="#" class="list-group-item">Link</a>
-				<a href="#" class="list-group-item">Link</a>
-				<a href="#" class="list-group-item">Link</a>-->
+              <div class="row">
+                <div class="fb-like" data-href="http://www.trainstatusonline.in/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="false" data-share="true"></div>
+                <div class="g-plus" data-action="share" data-annotation="bubble"></div>
+              </div><hr>
+              <div class="row">
+                  <div class="list-group">
 
-			  </div>
+                        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                        <!-- ad1 -->
+                        <ins class="adsbygoogle"
+                             style="display:inline-block;width:336px;height:280px"
+                             data-ad-client="ca-pub-5288701113836096"
+                             data-ad-slot="3927946163"></ins>
+                        <script>
+                        (adsbygoogle = window.adsbygoogle || []).push({});
+                        </script>
+                  <!--  <a href="#" class="list-group-item active">Link</a>
+                    <a href="#" class="list-group-item">Link</a>
+                    <a href="#" class="list-group-item">Link</a>
+                    <a href="#" class="list-group-item">Link</a>
+                    <a href="#" class="list-group-item">Link</a>
+                    <a href="#" class="list-group-item">Link</a>
+                    <a href="#" class="list-group-item">Link</a>-->
+
+                  </div>
+               </div>
 		</div><!--/span-->
 	</div><!--/row-->
 
@@ -140,7 +152,32 @@
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 
+<!-- for google share button Place this tag in your head or just before your close body tag.-->
+<script src="https://apis.google.com/js/platform.js" async defer></script>
 
+
+<style>
+#RecentPnr tr {
+display: inline-table;
+height:7px;
+width: 100%;
+
+}
+
+#RecentPnr{
+ width: 100%;
+ height:300px;
+ display: -moz-groupbox;
+ font-size: 12px;
+
+}
+#RecentPnr tbody{
+  overflow-y: scroll;
+  height: 100px;
+  width: 285px;
+  position: absolute;
+}
+</style>
 
 <script  src="{% static 'userpanal/js/dataBasePnr.js' %}"></script>
 <script src="{% static 'userpanal/js/DisableRightClick.js' %}"></script>
