add google site verification matatag

--- a/userpanal/templates/userpanal/base.html
+++ b/userpanal/templates/userpanal/base.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>{% block title %}Train Status Online{% endblock %}</title>
     {% load staticfiles %}
+
+    <meta name="google-site-verification" content="w-W-yglNnQNXoAS60yUVhlUIaMrCard4aWOptO_VDno" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!--<link href="http://www.tutorialspoint.com/bootstrap/css/bootstrap.min.css" rel="stylesheet">-->
     <link rel="stylesheet" type="text/css" href="{% static 'userpanal/bootstrap.min.css' %}" />
@@ -106,17 +108,32 @@
                 <div class="g-plus" data-action="share" data-annotation="bubble"></div>
               </div><hr>
               <div class="row">
-                  <div class="list-group">
 
                         <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                        <!-- ad1 -->
+                        <!-- ad2 -->
                         <ins class="adsbygoogle"
-                             style="display:inline-block;width:336px;height:280px"
+                             style="display:block"
                              data-ad-client="ca-pub-5288701113836096"
-                             data-ad-slot="3927946163"></ins>
+                             data-ad-slot="5216425767"
+                             data-ad-format="auto"></ins>
                         <script>
                         (adsbygoogle = window.adsbygoogle || []).push({});
                         </script>
+
+                  <div class="list-group">
+
+                        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                        <!-- ad2 -->
+                        <ins class="adsbygoogle"
+                             style="display:block"
+                             data-ad-client="ca-pub-5288701113836096"
+                             data-ad-slot="5216425767"
+                             data-ad-format="auto"></ins>
+                        <script>
+                        (adsbygoogle = window.adsbygoogle || []).push({});
+                        </script>
+
+
                   <!--  <a href="#" class="list-group-item active">Link</a>
                     <a href="#" class="list-group-item">Link</a>
                     <a href="#" class="list-group-item">Link</a>
