--- a/userpanal/templates/userpanal/base.html
+++ b/userpanal/templates/userpanal/base.html
@@ -16,7 +16,7 @@
 
     <link rel="stylesheet" type="text/css" href="{% static 'userpanal/style.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'userpanal/one-page-wonder.css' %}" />
-
+    <link rel="stylesheet" type="text/css" href="{% static 'userpanal/jquery.mloading.css' %}" />
 <!--
 <link rel="stylesheet" href="https://cdn.datatables.net/1.10.12/css/jquery.dataTables.min.css" />
 <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.3.js"></script>
@@ -109,29 +109,7 @@
               </div><hr>
               <div class="row">
 
-                        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                        <!-- ad2 -->
-                        <ins class="adsbygoogle"
-                             style="display:block"
-                             data-ad-client="ca-pub-5288701113836096"
-                             data-ad-slot="5216425767"
-                             data-ad-format="auto"></ins>
-                        <script>
-                        (adsbygoogle = window.adsbygoogle || []).push({});
-                        </script>
-
                   <div class="list-group">
-
-                        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                        <!-- ad2 -->
-                        <ins class="adsbygoogle"
-                             style="display:block"
-                             data-ad-client="ca-pub-5288701113836096"
-                             data-ad-slot="5216425767"
-                             data-ad-format="auto"></ins>
-                        <script>
-                        (adsbygoogle = window.adsbygoogle || []).push({});
-                        </script>
 
 
                   <!--  <a href="#" class="list-group-item active">Link</a>
