--- a/Train_Route/templates/Train_Route/trainRoute.html
+++ b/Train_Route/templates/Train_Route/trainRoute.html
@@ -4,10 +4,6 @@
 {% block body %}
 
     <style>
-        form{
-            border-collapse: collapse;
-            #width: 70%;
-        }
     table#myTable {
         align:"left";
         border: 1px solid black;
@@ -15,7 +11,7 @@
         width: 100%;
         text-align: left;
         border-collapse: collapse;
-        font-size: 10px;
+        font-size: 12px;
     }
     </style>
 
@@ -30,7 +26,7 @@
     </div>
 
     <div class="row">
-        <form id="trainRoute">
+        <form >
             {% csrf_token %}
             <div class="form-group">
                 <div class="input-group form-group">
@@ -39,7 +35,7 @@
                     </span>
                     <input class="form-control dd_user_input"  id="trainNumber" type="text" placeholder="Enter Train Number">
                     <span class="input-group-btn">
-                        <button type = "submit" class = "btn btn-info">Submit</button>
+                        <button type = "button" id="trainRoute" class = "btn btn-info">Submit</button>
                     </span>
                 </div>
             </div>
@@ -49,7 +45,15 @@
 </div>
 
 
-
+<script src="http://cdn.bootcss.com/require.js/2.2.0/require.js"></script>
+<script>
+    requirejs.config({
+        paths:{
+            'jquery':"http://cdn.bootcss.com/jquery/1.12.4/jquery.min",
+            'jquery-mloading':"{% static 'userpanal/js/jquery.mloading' %}"
+        }
+    });
+</script>
 <script src="{% static 'Train_Route/js/trainRoute.js' %}"></script>
 
 {% endblock %}
