--- a/userpanal/templates/userpanal/pnr.html
+++ b/userpanal/templates/userpanal/pnr.html
@@ -13,7 +13,7 @@
     </div>
 
     <div class="row">
-        <form id="pnrstatus">
+        <form >
             {% csrf_token %}
             <div class="form-group">
                 <div class="input-group form-group">
@@ -22,7 +22,7 @@
                     </span>
                     <input class="form-control dd_user_input"  id="pnrno" type="text" placeholder="10 Digit PNR Number">
                     <span class="input-group-btn">
-                        <button type = "submit" class = "btn btn-info">Submit</button>
+                        <button type = "button" id="pnrstatus" class = "btn btn-info">Submit</button>
                     </span>
                 </div>
             </div>
@@ -32,7 +32,15 @@
 
 </div>
 
-
+<script src="http://cdn.bootcss.com/require.js/2.2.0/require.js"></script>
+<script>
+    requirejs.config({
+        paths:{
+            'jquery':"http://cdn.bootcss.com/jquery/1.12.4/jquery.min",
+            'jquery-mloading':"{% static 'userpanal/js/jquery.mloading' %}"
+        }
+    });
+</script>
 <script src="{% static 'userpanal/js/userpanal.js' %}"></script>
 
 
