--- a/Seat_Availability/templates/Seat_Availability/seatAvailability.html
+++ b/Seat_Availability/templates/Seat_Availability/seatAvailability.html
@@ -13,7 +13,7 @@ table#myTable,#myTable2 {
     width: 100%;
     text-align: left;
     border-collapse: collapse;
-    font-size: 10px;
+    font-size: 12px;
 }
 </style>
 
@@ -22,7 +22,7 @@ table#myTable,#myTable2 {
     {% include 'userpanal/Detail.html' %}
 
    <div class="row content">
-      <form  id="train_between_station">
+      <form>
       {% csrf_token %}
       <table width="100%"  border="0">
       <tbody>
@@ -70,7 +70,7 @@ table#myTable,#myTable2 {
                 </div>
 
                 <div class="col-xs-3 col-sm-2 form-group">
-                    <button type = "submit" class = "btn btn-info">Submit</button>
+                    <button type = "button"  id="train_between_station" class = "btn btn-info">Submit</button>
                 </div>
           </td>
         </tr>
@@ -88,7 +88,15 @@ table#myTable,#myTable2 {
 
 
 
-
+<script src="http://cdn.bootcss.com/require.js/2.2.0/require.js"></script>
+<script>
+    requirejs.config({
+        paths:{
+            'jquery':"http://cdn.bootcss.com/jquery/1.12.4/jquery.min",
+            'jquery-mloading':"{% static 'userpanal/js/jquery.mloading' %}"
+        }
+    });
+</script>
 <script src="{% static 'Seat_Availability/js/seatAvailable.js' %}"></script>
 
 
