--- a/Train_Fair_Enquiry/templates/Train_Fair_Enquiry/trainFairEnquiry.html
+++ b/Train_Fair_Enquiry/templates/Train_Fair_Enquiry/trainFairEnquiry.html
@@ -21,7 +21,7 @@ table#myTable,#myTable2 {
 <div class="col-xs-18 col-sm-12">
   {% include 'userpanal/Detail.html' %}
   <div class="row content">
-  <form  id="train_fair">
+  <form>
   {% csrf_token %}
   <table >
   <tbody>
@@ -59,7 +59,7 @@ table#myTable,#myTable2 {
             </div>
 
             <div class="col-xs-3 col-sm-1 form-group">
-                <button type = "submit" class = "btn btn-info">Submit</button>
+                <button type = "button"  id="train_fair" class = "btn btn-info">Submit</button>
             </div>
       </td>
     </tr>
@@ -77,7 +77,15 @@ table#myTable,#myTable2 {
 
 
 
-
+<script src="http://cdn.bootcss.com/require.js/2.2.0/require.js"></script>
+<script>
+    requirejs.config({
+        paths:{
+            'jquery':"http://cdn.bootcss.com/jquery/1.12.4/jquery.min",
+            'jquery-mloading':"{% static 'userpanal/js/jquery.mloading' %}"
+        }
+    });
+</script>
 <script src="{% static 'Train_Fair_Enquiry/js/trainFair.js' %}"></script>
 
 
