warning in Cancelled train 9Nov 6.20PM

--- a/Cancelled_Trains/templates/Cancelled_Trains/cancelledTrains.html
+++ b/Cancelled_Trains/templates/Cancelled_Trains/cancelledTrains.html
@@ -65,7 +65,7 @@
     {% else %}
           <tbody>
             <tr>
-              <td colspan="10">{{ error }} </td>
+              <td colspan="10"><div class="alert alert-warning"><strong>{{ error }}</strong></div> </td>
             </tr>
           </tbody>
     {% endif %}
