--- a/Seat_Availability/templates/Seat_Availability/seatAvailability.html
+++ b/Seat_Availability/templates/Seat_Availability/seatAvailability.html
@@ -80,8 +80,10 @@ table#myTable,#myTable2 {
     </form>
   </div>
 
-    <div id="seatAvailableoutput"></div>
-    <div id="output"></div>
+
+    <div id="output">
+        <div id="seatAvailableoutput"></div>
+    </div>
 
 </div>
 
