--- a/userpanal/templates/userpanal/base.html
+++ b/userpanal/templates/userpanal/base.html
@@ -49,7 +49,8 @@
 
                           <ul class = "dropdown-menu">
                              <li><a>Hello {{ user.get_full_name|default:user.username }}!</a></li>
-
+                             <li class = "divider"></li>
+                             <li><a href='{% url 'Database:Database' %}'>Database</a></li>
                              <li class = "divider"></li>
                              <li><a href='/accounts/logout'  name='csrfmiddlewaretoken' value='NEonJCMHfluYaxWBuXhsU48zFr63Tbswfiz94lngPfx44NpAiVuAwMRaUpxQshvI'>Logout</a></li>
                           </ul>
@@ -76,7 +77,9 @@
                  {% if user and not user.is_anonymous %}
                     <br><hr>
                     <div class="col-xs-6 col-sm-4">
-                        <div id="recent_search"></div>
+                        {% if info_page != 'Database'%}
+                            <div id="recent_search"></div>
+                        {% endif %}
                     </div>
                     <div class="col-xs-6 col-sm-4">
                         <div id="#"></div>
